Fixed issue where cards went under the stack when being dragged out from the footer. (Removed the nice webkit-overflow-scroll-touch thing). Made the description box on the task modal shorter, so it only displays three lines of description before it has to scroll.

--- a/www/css/subjectsBottomPanel.css
+++ b/www/css/subjectsBottomPanel.css
@@ -72,7 +72,6 @@
     display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
     overflow: auto;
     overflow-x: scroll;
-    -webkit-overflow-scrolling: touch;
 }
 
 #subjectFilters, #unassignedTasksList {
@@ -113,7 +112,6 @@ button:focus {outline:0;}
     margin-bottom: 0;
     white-space: normal;
     text-align: left;
-    -webkit-transform: translate3d(0,0,0);
     z-index: 20;
 }
 
